test/should_pass/ret_001.grg
using basic_model_002;

rule r : (A, AB, B, N) {
	pattern {
		x : A;
		y : AB;
		z : C;
		n : N;
	}
	modify {
		return (x, y, y, n);
	}
}

