test/should_fail/ret_002.grg
rule r : (Node, Node) {
	pattern {
		x: Node;
		y: Node;
	}
	modify {
		delete(x);
		return(x, y);
	}
}

